--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ margin-top: 6%;
     }
   }
   .skill-bars .bar .progress-line{
-    height: 15px;
+    height: 20px;
     width: 100%;
     background: #f0f0f0;
     position: relative;
@@ -243,7 +243,7 @@ margin-top: 6%;
     border-radius: 10px;
     transform: scaleX(0);
     transform-origin: left;
-    background: #d68bb6;
+    background: #dc143c;
     animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
   }
   .bar .progress-line.html span{
